# nand2tetris

./: README.md
projects/06/assembler/: assembler.cabal
projects/06/assembler/.stack-work/install/x86_64-osx/nightly-2015-08-11/7.10.2/flag-cache/: ansi-terminal-0.6.2.1-45b37b0fd2ec6c9b1401ee63612af3c1  assembler-0.1.0.0-0073183628bfcd6b503b91269c6d9f03  assembler-0.1.0.0-90370ccc6b1da782d4eefc0078a1a7d0  cmdargs-0.10.13-a8aec3840014c1a2b642b8ee0671d451  cpphs-1.19.2-215f3e6524cfd010d41650a1a1d89ae1  extra-1.4.1-10981919157f075e77e5e570c61376e9  happy-1.19.5  hashable-1.2.3.3-09c4177c49dd46a63f7036317bb17114  haskell-src-exts-1.16.0.1-3b3cd01a33c8fa2b6d92a59c096896ee  hlint-1.9.21-463916564813efc0eeb531a6fadee6c2  hscolour-1.23-77c6937e0747fc7892d42aa452545b51  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  new-template-0.1.0.0-ecc7179ee91a91ec541d38000d8ae65e  old-locale-1.0.0.7-2f3f4311e12e7847c2af472c26151237  old-time-1.1.0.3-87d81aebf328992ede4a450f399e9481  parsec-3.1.9-bddea73c8bf2d5ff1335dae2cc92e789  polyparse-1.11-20ef0f1ecd870455293903bf9d2fc111  syb-0.5.1-09089498a055bd723b4a95c1351d3c8a  text-1.2.1.3-2395ef415c1b20175aae83b50060e389  uniplate-1.6.12-ad13a3595f5bb5450df7da13c39ce871  unordered-containers-0.2.5.1-09ed02f61ed89449c8cd4b51d7f295c2
projects/06/assembler/.stack-work/install/x86_64-osx/nightly-2015-08-11/7.10.2/lib/x86_64-osx-ghc-7.10.2/assembler-0.1.0.0-1i4FetmHLei1pUKr3GXLtZ/: Assembler.hi  (+2 more)
projects/06/assembler/.stack-work/install/x86_64-osx/nightly-2015-08-11/7.10.2/pkgdb/: assembler-0.1.0.0-0033fca49d30538691bbdc2dfec1906c.conf  new-template-0.1.0.0-ecc7179ee91a91ec541d38000d8ae65e.conf  package.cache
projects/06/assembler/app/: Main.hs
projects/06/assembler/src/: Assembler  Assembler.hi  Assembler.hs  HackParser.hi  HackParser.hs  Mult.hack  Symbol.hi  Symbol.hs  test.hack
(+132 files in other folders)
