name:                assembler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assembler, HackParser, Symbol
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , extra >= 1.4.1
                     , mtl >= 2.2.1
                     , parsec >= 3.1.0 && < 4.0
                     , unordered-containers >= 0.2.5.1
  default-language:    Haskell2010

executable assembler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       assembler
                     , base
                     , extra >= 1.4.1
                     , mtl >= 2.2.1
                     , unordered-containers >= 0.2.5.1
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtl >= 2.2.1
                     , new-template
                     , unordered-containers >= 0.2.5.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
